--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "description": "Configuration for Biome used in WebPowered projects",
   "name": "@webpowered/biome",
+  "peerDependencies": {
+    "@biomejs/biome": "latest"
+  },
   "publishConfig": {
     "access": "public"
   },
