build(package): export biome.json
Signed-off-by: Hunar Roop Kahlon <hunar.roop@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"description": "Configuration for Biome used in WebPowered projects",
+	"exports": {
+		".": "./biome.json"
+	},
 	"name": "@webpowered/biome",
 	"peerDependencies": {
 		"@biomejs/biome": "latest"
